fixes from comments